{
  "version": 4,
  "terraform_version": "1.4.6",
  "serial": 20,
  "lineage": "4eb9ed40-bb5e-f1bc-dceb-0f473782ed15",
  "resources": [
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "firewall",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "22"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2023-05-25T08:24:32.123-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/systemdesign-387616/global/firewalls/gritfy-firewall-externalssh",
            "log_config": [],
            "name": "gritfy-firewall-externalssh",
            "network": "https://www.googleapis.com/compute/v1/projects/systemdesign-387616/global/networks/default",
            "priority": 1000,
            "project": "systemdesign-387616",
            "self_link": "https://www.googleapis.com/compute/v1/projects/systemdesign-387616/global/firewalls/gritfy-firewall-externalssh",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [
              "externalssh"
            ],
            "timeouts": null
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "webserverrule",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "80",
                  "443"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2023-05-25T08:24:32.161-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/systemdesign-387616/global/firewalls/gritfy-webserver",
            "log_config": [],
            "name": "gritfy-webserver",
            "network": "https://www.googleapis.com/compute/v1/projects/systemdesign-387616/global/networks/default",
            "priority": 1000,
            "project": "systemdesign-387616",
            "self_link": "https://www.googleapis.com/compute/v1/projects/systemdesign-387616/global/firewalls/gritfy-webserver",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [
              "webserver"
            ],
            "timeouts": null
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "app",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "image": "https://www.googleapis.com/compute/v1/projects/debian-cloud/global/images/debian-10-buster-v20230510",
                    "size": 10,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/systemdesign-387616/zones/us-central1-a/disks/app"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Haswell",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/systemdesign-387616/zones/us-central1-a/instances/app",
            "instance_id": "5850749026638642775",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "n1-standard-2",
            "metadata": {
              "ssh-keys": "ssh-rsa AAAAB3NzaC1yc2EAAAADAQABAAABgQDCQkrxeVqP/mKjaej55uPxdZxPRLfAcbh66+h6QW+lKqbmdiLHob6bd1gPRCVZj25GmPjwwfWiLl8yGbDYHKRLFyT+kRSQF6t9XshQcYCLWOlQ5yB/S3zpc1BuSvsU0n1+kYMRY19rZYe2wbS1YxmCIoITobazjILNGNdlPpGeAmxwi0PK2wzsVanT1katZGJlLJyynzhdNe8hm7VtLkfv1ZkpE6wshS4U+eXy8bNuyR5Hgsa3z1yGDVo1MKHbXqvgA8z6T8Az6kap/cSYAUR0oXDjzkZJpA7ZliAykPYF36SQsW27er5q7lodHNUmOOvMYMcnGM2CWMHgg+e1pQ7uCZ+hsaBK71FsU2ghtQDmJvuyFt1N5/eSFS0/XIuq57VFv4qX/OkXUSOg1anjkKJbQUOHbmn2MrTaAttVwzHfQINyGB16t [...]
            },
            "metadata_fingerprint": "HoqAK-6JnX8=",
            "name": "app",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "34.27.241.198",
                    "network_tier": "PREMIUM"
                  }
                ],
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/systemdesign-387616/global/networks/default",
                "network_ip": "10.128.0.36",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/systemdesign-387616/regions/us-central1/subnetworks/default",
                "subnetwork_project": "systemdesign-387616"
              }
            ],
            "project": "systemdesign-387616",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/systemdesign-387616/zones/us-central1-a/instances/app",
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "externalssh",
              "webserver"
            ],
            "tags_fingerprint": "Mh9u1hBHiNA=",
            "zone": "us-central1-a"
          },
          "dependencies": [
            "google_compute_firewall.firewall",
            "google_compute_firewall.webserverrule"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "db",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "image": "https://www.googleapis.com/compute/v1/projects/debian-cloud/global/images/debian-10-buster-v20230510",
                    "size": 10,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/systemdesign-387616/zones/us-central1-a/disks/db"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Haswell",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/systemdesign-387616/zones/us-central1-a/instances/db",
            "instance_id": "397804924970352214",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "n1-standard-1",
            "metadata": {
              "ssh-keys": "ssh-rsa AAAAB3NzaC1yc2EAAAADAQABAAABgQDCQkrxeVqP/mKjaej55uPxdZxPRLfAcbh66+h6QW+lKqbmdiLHob6bd1gPRCVZj25GmPjwwfWiLl8yGbDYHKRLFyT+kRSQF6t9XshQcYCLWOlQ5yB/S3zpc1BuSvsU0n1+kYMRY19rZYe2wbS1YxmCIoITobazjILNGNdlPpGeAmxwi0PK2wzsVanT1katZGJlLJyynzhdNe8hm7VtLkfv1ZkpE6wshS4U+eXy8bNuyR5Hgsa3z1yGDVo1MKHbXqvgA8z6T8Az6kap/cSYAUR0oXDjzkZJpA7ZliAykPYF36SQsW27er5q7lodHNUmOOvMYMcnGM2CWMHgg+e1pQ7uCZ+hsaBK71FsU2ghtQDmJvuyFt1N5/eSFS0/XIuq57VFv4qX/OkXUSOg1anjkKJbQUOHbmn2MrTaAttVwzHfQINyGB16t [...]
            },
            "metadata_fingerprint": "HoqAK-6JnX8=",
            "name": "db",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "34.172.67.194",
                    "network_tier": "PREMIUM"
                  }
                ],
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/systemdesign-387616/global/networks/default",
                "network_ip": "10.128.0.37",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/systemdesign-387616/regions/us-central1/subnetworks/default",
                "subnetwork_project": "systemdesign-387616"
              }
            ],
            "project": "systemdesign-387616",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/systemdesign-387616/zones/us-central1-a/instances/db",
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "externalssh",
              "webserver"
            ],
            "tags_fingerprint": "Mh9u1hBHiNA=",
            "zone": "us-central1-a"
          },
          "dependencies": [
            "google_compute_firewall.firewall",
            "google_compute_firewall.webserverrule"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "web",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "image": "https://www.googleapis.com/compute/v1/projects/debian-cloud/global/images/debian-10-buster-v20230510",
                    "size": 10,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/systemdesign-387616/zones/us-central1-a/disks/web"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Haswell",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/systemdesign-387616/zones/us-central1-a/instances/web",
            "instance_id": "6587874012880322134",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "n1-standard-1",
            "metadata": {
              "ssh-keys": "ssh-rsa AAAAB3NzaC1yc2EAAAADAQABAAABgQDCQkrxeVqP/mKjaej55uPxdZxPRLfAcbh66+h6QW+lKqbmdiLHob6bd1gPRCVZj25GmPjwwfWiLl8yGbDYHKRLFyT+kRSQF6t9XshQcYCLWOlQ5yB/S3zpc1BuSvsU0n1+kYMRY19rZYe2wbS1YxmCIoITobazjILNGNdlPpGeAmxwi0PK2wzsVanT1katZGJlLJyynzhdNe8hm7VtLkfv1ZkpE6wshS4U+eXy8bNuyR5Hgsa3z1yGDVo1MKHbXqvgA8z6T8Az6kap/cSYAUR0oXDjzkZJpA7ZliAykPYF36SQsW27er5q7lodHNUmOOvMYMcnGM2CWMHgg+e1pQ7uCZ+hsaBK71FsU2ghtQDmJvuyFt1N5/eSFS0/XIuq57VFv4qX/OkXUSOg1anjkKJbQUOHbmn2MrTaAttVwzHfQINyGB16t [...]
            },
            "metadata_fingerprint": "HoqAK-6JnX8=",
            "name": "web",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "35.202.76.153",
                    "network_tier": "PREMIUM"
                  }
                ],
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/systemdesign-387616/global/networks/default",
                "network_ip": "10.128.0.38",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/systemdesign-387616/regions/us-central1/subnetworks/default",
                "subnetwork_project": "systemdesign-387616"
              }
            ],
            "project": "systemdesign-387616",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/systemdesign-387616/zones/us-central1-a/instances/web",
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "externalssh",
              "webserver"
            ],
            "tags_fingerprint": "Mh9u1hBHiNA=",
            "zone": "us-central1-a"
          },
          "dependencies": [
            "google_compute_firewall.firewall",
            "google_compute_firewall.webserverrule"
          ]
        }
      ]
    }
  ]
}